# Elastic-Tracker

./: .gitignore  scan_src_ros1_build_and_cpp_deps.json  tracking.sh  tracking_real.sh
docs/: ros1_decouple_ros2_migration_matrix.md
ros2_ego/ego-planner-swarm/install/: local_setup.sh  setup.sh
ros2_ego/ego-planner-swarm/log/: latest_build
ros2_tracker/: PORTING_REPORT.md
ros2_tracker/install/: local_setup.sh  setup.sh
ros2_tracker/log/: latest_build  latest_list
ros2_tracker/src/tracker/object_detection_msgs/: CMakeLists.txt
ros2_tracker/src/tracker/tracker_fsm/: CMakeLists.txt  package.xml
ros2_tracker/src/tracker/traj_opt/: CMakeLists.txt
ros2_tracker/src/uav_simulator/local_sensing/: CMakeLists.txt
ros2_ws/: README.md  RUN_HUMBLE.md
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/include/: maps.hpp
ros2_ws/install/include/decomp_basis/: data_type.h  data_utils.h
ros2_ws/install/include/decomp_geometry/: ellipsoid.h  geometric_utils.h  polyhedron.h
ros2_ws/install/include/decomp_ros_utils/: data_ros_utils.h
ros2_ws/install/include/decomp_util/: decomp_base.h  ellipsoid_decomp.h  iterative_decomp.h  line_segment.h  seed_decomp.h
ros2_ws/install/include/env/: env_ros2.hpp
ros2_ws/install/include/mockamap/: param_provider.hpp
ros2_ws/install/include/prediction/: prediction_ros2.hpp
ros2_ws/install/include/so3_controller/: so3_controller.hpp
ros2_ws/install/include/so3_quadrotor/: geometry_utils.hpp  quadrotor_dynamics.hpp
ros2_ws/install/include/visualization/: visualization_ros2.hpp
ros2_ws/install/include/wr_msg/: wr_msg_ros2.hpp
ros2_ws/install/lib/local_sensing_node/: pcl_render_node
ros2_ws/install/lib/mapping/: mapping_node  mapping_vis_node  visualize_history_path_node
ros2_ws/install/lib/mockamap/: mockamap_node
ros2_ws/install/lib/odom_visualization/: odom_visualization_car_node  odom_visualization_node
ros2_ws/install/lib/planning/: planning_node  traj_server_node
ros2_ws/install/lib/so3_controller/: so3_controller_node
ros2_ws/install/lib/so3_quadrotor/: so3_quadrotor_node
ros2_ws/log/: latest_build
ros2_ws/scripts/: run_all_smoke.sh  smoke_test_full_chain.sh  smoke_test_local_sensing.sh  smoke_test_mapping.sh  smoke_test_planning.sh  smoke_test_traj_opt.sh
ros2_ws/src/decomp_ros_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/decomp_ros_utils/: CMakeLists.txt  package.xml  plugins_description.xml
ros2_ws/src/decomp_ros_utils/include/decomp_basis/: data_type.h  data_utils.h
ros2_ws/src/decomp_ros_utils/include/decomp_geometry/: ellipsoid.h  geometric_utils.h  polyhedron.h
ros2_ws/src/decomp_ros_utils/include/decomp_ros_utils/: data_ros_utils.h
ros2_ws/src/decomp_ros_utils/include/decomp_util/: decomp_base.h  ellipsoid_decomp.h  iterative_decomp.h  line_segment.h  seed_decomp.h
ros2_ws/src/decomp_ros_utils/src/: bound_visual.cpp  bound_visual.h  ellipsoid_array_display.cpp  ellipsoid_array_display.h  ellipsoid_array_visual.cpp  ellipsoid_array_visual.h  mesh_visual.cpp  mesh_visual.h  polyhedron_array_display.cpp  polyhedron_array_display.h  vector_visual.cpp  vector_visual.h
ros2_ws/src/elastic_tracker_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/elastic_tracker_bringup/config/: mapping_fake.yaml  planning.yaml  planning_fake.yaml  rviz_sim_ros2.rviz  so3_controller.yaml  so3_quadrotor.yaml
ros2_ws/src/elastic_tracker_bringup/launch/: fake_sim.launch.py  tracking_sim.launch.py
ros2_ws/src/local_sensing_node/: CMakeLists.txt  package.xml
ros2_ws/src/local_sensing_node/params/: camera.yaml
ros2_ws/src/local_sensing_node/src/: pcl_render_node_ros2.cpp
ros2_ws/src/mapping/: CMakeLists.txt  package.xml
ros2_ws/src/mapping/src/: mapping_component.cpp  mapping_main.cpp  mapping_vis_node_ros2.cpp  visualize_history_path_node_ros2.cpp
ros2_ws/src/mapping_core/: CMakeLists.txt  package.xml
ros2_ws/src/mapping_core/include/mapping_core/: mapping.h
ros2_ws/src/mapping_core/src/: mapping.cc
ros2_ws/src/mockamap/: CMakeLists.txt  package.xml
ros2_ws/src/mockamap/src/: maps.cpp  mockamap.cpp
ros2_ws/src/object_detection_msgs/: CMakeLists.txt
ros2_ws/src/odom_visualization/: CMakeLists.txt
ros2_ws/src/odom_visualization/src/: odom_visualization.cpp  odom_visualization_car_node_ros2.cpp  odom_visualization_node_ros2.cpp
ros2_ws/src/planning/: CMakeLists.txt  package.xml
ros2_ws/src/planning/include/env/: env_ros2.hpp
ros2_ws/src/planning/include/prediction/: prediction_ros2.hpp
ros2_ws/src/planning/include/visualization/: visualization_ros2.hpp
ros2_ws/src/planning/include/wr_msg/: wr_msg_ros2.hpp
ros2_ws/src/planning/src/: planning_component.cpp  planning_main.cpp  traj_server_node_ros2.cpp
ros2_ws/src/pose_utils/: CMakeLists.txt
ros2_ws/src/quadrotor_msgs/: CMakeLists.txt
ros2_ws/src/so3_controller/: CMakeLists.txt  package.xml
ros2_ws/src/so3_controller/include/so3_controller/: so3_controller.hpp
ros2_ws/src/so3_controller/src/: so3_controller_component.cpp  so3_controller_main.cpp
ros2_ws/src/so3_quadrotor/: CMakeLists.txt  package.xml
ros2_ws/src/so3_quadrotor/include/so3_quadrotor/: geometry_utils.hpp  quadrotor_dynamics.hpp
ros2_ws/src/so3_quadrotor/src/: so3_quadrotor_component.cpp  so3_quadrotor_main.cpp
ros2_ws/src/target_ekf/: CMakeLists.txt  package.xml
ros2_ws/src/target_ekf/config/: camera.yaml  camera_ros2.yaml
ros2_ws/src/target_ekf/src/: fake_target_pub_node.cpp  target_ekf_node.cpp  target_ekf_sim_node.cpp
ros2_ws/src/traj_opt/: CMakeLists.txt  package.xml
ros2_ws/src/traj_opt_core/: CMakeLists.txt
ros2_ws/src/traj_opt_core/include/traj_opt/: traj_opt.h
ros2_ws/src/traj_opt_core/include/traj_opt_core/: logging.hpp
ros2_ws/src/traj_opt_core/src/: traj_opt.cc  traj_opt_fake.cc
ros2_ws/src/uav_simulator/: CMakeLists.txt  package.xml
ros2_ws/src/uav_simulator/config/: mockamap.yaml  so3_controller.yaml  so3_quadrotor.yaml
ros2_ws/src/uav_simulator/launch/: uav_simulator.launch.py
sh_utils/: pub_triger_ros2.sh
src/mapping/launch/: run.launch
src/uav_simulator/local_sensing/: CMakeLists.txt
(+2244 files in other folders)
