<?xml version="1.0"?>
<package format="3">
  <name>decomp_ros_msgs</name>
  <version>0.0.1</version>
  <description>decomp_ros_msgs (ROS2 port): message definitions for DecompROS.</description>

  <maintainer email="noreply@example.com">Elastic-Tracker</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>

  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
</package>

