<?xml version="1.0"?>
<package format="3">
  <name>decomp_ros_utils</name>
  <version>0.0.1</version>
  <description>DecompROS RViz2 display plugins (ROS2 port of decomp_ros_utils).</description>

  <maintainer email="noreply@example.com">Elastic-Tracker</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>decomp_ros_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <depend>rviz_common</depend>
  <depend>rviz_rendering</depend>
  <depend>pluginlib</depend>

  <build_depend>eigen</build_depend>
  <exec_depend>eigen</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

