<?xml version="1.0"?>
<package format="3">
  <name>elastic_tracker_bringup</name>
  <version>0.0.1</version>
  <description>Bringup / launch files for Elastic-Tracker ROS2 stack.</description>

  <maintainer email="noreply@example.com">Elastic-Tracker</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>

  <exec_depend>mapping</exec_depend>
  <exec_depend>planning</exec_depend>
  <exec_depend>mockamap</exec_depend>
  <exec_depend>so3_quadrotor</exec_depend>
  <exec_depend>so3_controller</exec_depend>
  <exec_depend>odom_visualization</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

