<?xml version="1.0"?>
<package format="3">
  <name>local_sensing_node</name>
  <version>0.1.0</version>
  <description>Local sensing (non-CUDA) depth rendering node (ROS2 port).</description>

  <maintainer email="noreply@example.com">Elastic-Tracker</maintainer>
  <license>GPL-3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>

  <build_depend>eigen</build_depend>
  <exec_depend>eigen</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

