<?xml version="1.0"?>
<package format="3">
  <name>mapping</name>
  <version>0.0.1</version>
  <description>Mapping node/component (ROS2 port; replacement for ROS1 mapping nodelet).</description>

  <maintainer email="noreply@example.com">Elastic-Tracker</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>message_filters</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>quadrotor_msgs</depend>
  <depend>mapping_core</depend>

  <depend>cv_bridge</depend>

  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>

  <build_depend>eigen</build_depend>
  <exec_depend>eigen</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

