<?xml version="1.0"?>
<package format="3">
  <name>so3_controller</name>
  <version>0.0.1</version>
  <description>SO(3) controller (ROS2 port; component replacement for ROS1 nodelet).</description>

  <maintainer email="noreply@example.com">Elastic-Tracker</maintainer>
  <license>GPL-3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>quadrotor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>

  <build_depend>eigen</build_depend>
  <exec_depend>eigen</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

