<?xml version="1.0"?>
<package format="3">
  <name>target_ekf</name>
  <version>0.0.1</version>
  <description>Target EKF nodes (ROS2 port).</description>

  <maintainer email="noreply@example.com">Elastic-Tracker</maintainer>
  <license>GPL-3.0-or-later</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>message_filters</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>object_detection_msgs</depend>

  <depend>Eigen3</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
</package>

