<?xml version="1.0"?>
<package format="3">
  <name>traj_opt</name>
  <version>0.0.1</version>
  <description>ROS2 wrapper package for traj_opt. Provides ament-cmake package compatibility while reusing traj_opt_core implementation.</description>

  <maintainer email="jlji@zju.edu.cn">ji</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Reuse the pure C++ implementation -->
  <depend>traj_opt_core</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

