<?xml version="1.0"?>
<package format="3">
  <name>uav_simulator</name>
  <version>0.0.1</version>
  <description>UAV simulator bringup (ROS2 port of ROS1 uav_simulator launch/config).</description>

  <maintainer email="noreply@example.com">Elastic-Tracker</maintainer>
  <license>GPL-3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>

  <exec_depend>so3_quadrotor</exec_depend>
  <exec_depend>so3_controller</exec_depend>
  <exec_depend>local_sensing_node</exec_depend>
  <exec_depend>mockamap</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

